--- a/templates/main.html
+++ b/templates/main.html
@@ -1,20 +1,62 @@
-{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-        <!-- Google tag (gtag.js) -->
+    {% load static %}
+
+    <!-- Google Tag Manager -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QZ5C98E82T"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'G-QZ5C98E82T');
     </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SLOTALARM</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="KENNEKSLOTS by SLOTALARM bietet ausführliche Bewertungen und Filterfunktionen, um das perfekte Online-Casino zu finden. Hier sind alle Casinos von unserem Streamer getestet!">
+    <meta name="keywords" content="Online-Casino, Casino-Bewertungen, Einzahlungsmethoden, Spieleprovider, Bonusrechner, KENNEKSLOTS, SlotAlarm, Paysafe">
+    <link rel="canonical" href="https://www.kennekslots.com/">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="KENNEKSLOTS by SLOTALARM - Deine Casino-Experten">
+    <meta property="og:description" content="Finde das beste Online-Casino mit unseren Filterfunktionen und dem Bonusrechner. Getestet und bewertet von unserem erfahrenen Streamer!">
+    <meta property="og:image" content="https://www.kennelsots.com/media/images/design/header_logo.webp">
+    <meta property="og:url" content="https://www.kennekslots.com/">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="KENNEKSLOTS by SLOTALARM - Deine Casino-Experten">
+    <meta name="twitter:description" content="Ausführliche Bewertungen und Filterfunktionen für das beste Online-Casino. Geprüft und empfohlen von unserem Streamer!">
+    <meta name="twitter:image" content="https://www.kennelsots.com/media/images/design/header_logo.webp">
+
+    <!-- Structured Data for Organization -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "KENNEKSLOTS by SLOTALARM",
+      "url": "https://www.kennekslots.com",
+      "logo": "https://www.kennelsots.com/media/images/design/header_logo.webp",
+      "sameAs": [
+        "https://www.facebook.com/KennekSlots/",
+        "https://www.youtube.com/channel/UCVYo1RXj-na9dF3XMhHsuIw",
+        "https://www.instagram.com/kennekslots/",
+        "https://dlive.tv/kennekslots",
+        "https://kick.com/kennekslots"
+      ]
+    }
+    </script>
+
+    <title>KENNEKSLOTS by SLOTALARM - Die besten Casino-Empfehlungen</title>
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <!-- Font Awesome Icons -->
     <script src="https://kit.fontawesome.com/4d6249dd3a.js" crossorigin="anonymous"></script>
 </head>
 
