--- a/casinos/static/css/style.css
+++ b/casinos/static/css/style.css
@@ -466,6 +466,7 @@ input {
 
 .content {
     width: 80%;
+    max-width: 1300px;
     margin: 0 auto; /* Zentriert die gesamte .content-Box horizontal */
 }
 
@@ -689,12 +690,29 @@ the number of this selector parts is our tab count limit */
     display: none;
 }
 
-@media screen and (max-width: 1400px) {
-    .casino_list_item {
+@media screen and (max-width: 1650px) {
+    .casino_list_item_icon {
+        min-height: 150px;
+        min-width: 150px;
+        border-radius: 10px 10px 0 0;
+        background-size: contain, contain, 500%;
+    }
+
+    .casino_list_item_affiliate_link {
+        margin: 0 15px;
+    }
+
+    .button {
+        padding: 25px 15px;
     }
 
     .panel {
         flex-wrap: wrap;
+    }
+
+    .ribbon {
+        font-size: 0.75em;
+        font-weight: 500;
     }
 
     .filter_row {
@@ -722,14 +740,14 @@ the number of this selector parts is our tab count limit */
 
 }
 
-@media screen and (max-width: 1350px) {
+@media screen and (max-width: 1280px) {
 
     .casino_list_item {
         display: block;
     }
 
     .casino_list_item_icon {
-        min-height: 150px;
+        min-height: 100px;
         min-width: 150px;
         border-radius: 10px 10px 0 0;
         background-size: contain, contain, 500%;
