--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,7 +15,7 @@
         <br>
         <a href="{{ social_media_links.facebook }}" target="_blank"><i class="social fa-brands fa-facebook"></i></a>
         <a href="{{ social_media_links.youtube }}" target="_blank"><i class="social fa-brands fa-youtube"></i></a>
-        <a href="{{ social_media_links.twitch }}" target="_blank"><i class="social fa-brands fa-twitch"></i></a>
+        <!-- <a href="{{ social_media_links.twitch }}" target="_blank"><i class="social fa-brands fa-twitch"></i></a> -->
         <a href="{{ social_media_links.instagram }}" target="_blank"><i class="social fa-brands fa-instagram"></i></a>
         <a href="{{ social_media_links.kick }}" target="_blank"><i class="social fa-brands fa-kickstarter"></i></a>
         <a href="{{ social_media_links.dlive }}" target="_blank"><i class="social fa-solid fa-user-ninja"></i></a>
